--- a/css-snippets/clean-css-practices/style.css
+++ b/css-snippets/clean-css-practices/style.css
@@ -15,7 +15,8 @@ button {
   width: 50%;
   padding: 0.5rem;
 }
-
+/* Commented out from improvements (see below) */
+/*
 .close {
   background: #e00;
   border: 2px solid #000;
@@ -28,4 +29,25 @@ button {
   padding: 5px;
   border-radius: 100px;
   width: auto;
+}
+*/
+
+/* Preferred method (avoiding global selectors) */
+.default {
+  background: #ffc107;
+  border: 1px outset #ff9800;
+  display: block;
+  font: bold 16px / 1.5 sans-serif;
+  margin: 1rem auto;
+  width: 50%;
+  padding: 0.5rem;
+}
+
+.close {
+  background: #e00;
+  border: 2px solid #fff;
+  color: #fff;
+  font-size: 12px;
+  padding: 5px;
+  border-radius: 100px;
 }
