--- a/js-novice-to-ninja/quiz-ninja-project/styles.css
+++ b/js-novice-to-ninja/quiz-ninja-project/styles.css
@@ -8,7 +8,7 @@
 header {
   width: 100%;
   height: 100px;
-  font: bold 36px/120% Arial, Helvetica, sans-serif;
+  font: bold 24px/120% Arial, Helvetica, sans-serif;
   text-align: center;
   background: #333;
   color: #c00;
@@ -23,7 +23,7 @@ section p {
   color: #666;
   text-align: center;
   padding: 10px;
-  margin: 10px;
+  margin: 10px auto;
   width: 300px;
 }
 
@@ -39,10 +39,21 @@ section p {
   color: #600;
 }
 
-button {
+input, button {
   font: bold 24px/150% Arial, Helvetica, sans-serif;
   display: block;
   width: 300px;
   padding: 10px;
   margin: 10px auto;
+}
+
+body {
+  width: 400px;
+  margin: 0 auto;
+  background: #fff;
+  height: 100vh;
+}
+
+html {
+  background: #444;
 }
