--- a/js-novice-to-ninja/animation/styles.css
+++ b/js-novice-to-ninja/animation/styles.css
@@ -6,3 +6,20 @@
   height: 100px;
   background: #d16;
 }
+
+#rectangle {
+  margin: 100px;
+  width: 300px;
+  height: 100px;
+  background: #b3e;
+  animation: spin 4s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
