added a timer to the quiz project; added some CSS styles and answer (input) fixes (lowercasing for equality)

--- a/js-novice-to-ninja/quiz-ninja-project/styles.css
+++ b/js-novice-to-ninja/quiz-ninja-project/styles.css
@@ -39,7 +39,7 @@ section p {
   color: #600;
 }
 
-input, button {
+input, button, p {
   font: bold 24px/150% Arial, Helvetica, sans-serif;
   display: block;
   width: 300px;
@@ -56,4 +56,8 @@ body {
 
 html {
   background: #444;
+}
+
+#timer {
+  text-align: center;
 }
