--- a/css-snippets/animation/styles.css
+++ b/css-snippets/animation/styles.css
@@ -23,7 +23,16 @@
   width: 200px;
   height: 200px;
   background-color: coral;
-  animation: squareToCircle 2s 1s infinite alternate;
+  animation: squareToCircle 2s 1s alternate;
+}
+
+#promo {
+  width: 300px;
+  height: 50px;
+  font-size: 24px;
+  font-family: sans-serif;
+  text-align: center;
+  animation: bounceIn 2s 1s;
 }
 
 @keyframes squareFade {
@@ -67,5 +76,20 @@
     border-radius: 50%;
     background: darksalmon;
     transform: rotate(180deg);
+  }
+}
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
   }
 }
