--- a/css-snippets/animation/battery-drain/style.css
+++ b/css-snippets/animation/battery-drain/style.css
@@ -16,17 +16,18 @@
 
 #capacity-container {
   width: 95%;
-  height: 62.5px;
+  height: 65px;
+  background-color: chartreuse;
   /* border-radius: 24px; */
-  border: 2px solid black;
-  margin: 5px auto;
+  margin-top: 5px;
+  margin-left: 5px;
   animation: deplete 5s 1s;
 }
 
 @keyframes deplete {
   0% {
-    width: 100%;
-    background-color: green;
+    width: 95%;
+    background-color: chartreuse;
   }
 
   25% {
@@ -46,5 +47,6 @@
 
   100% {
     width: 0;
+    background-color: red;
   }
 }
