added a border and centered the text for the vertical navigation

--- a/css-snippets/header-examples/basic/css/styles.css
+++ b/css-snippets/header-examples/basic/css/styles.css
@@ -9,6 +9,16 @@ ul {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  border: 1px solid #555;
+}
+
+li {
+  text-align: center;
+  border-bottom: 1px solid #555;
+}
+
+li:last-child {
+  border-bottom: none;
 }
 
 li a {
