--- a/css-snippets/header-examples/basic/css/styles.css
+++ b/css-snippets/header-examples/basic/css/styles.css
@@ -3,23 +3,28 @@
 /* Vertical navigation bar */
 
 ul {
-  width: 200px;
+  width: 25%;
+  height: 100%;
+  position: fixed;
+  overflow: auto;
   background-color: #f1f1f1;
   list-style-type: none;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  border: 1px solid #555;
+  /* border: 1px solid #555; */
 }
 
 li {
   text-align: center;
-  border-bottom: 1px solid #555;
+  /* border-bottom: 1px solid #555; */
 }
 
+/*
 li:last-child {
   border-bottom: none;
 }
+*/
 
 li a {
   display: block;
